# pydplus

./: .env.example  .gitignore  .readthedocs.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug-report.md  ci-request.md  docs-request.md  feature-request.md  maintainer-bug.md  maintainer-chore.md  maintainer-ci.md  maintainer-docs.md  maintainer-feature.md  maintainer-refactor.md  maintainer-security.md  maintainer-test.md  refactor-request.md  security-report.md  test-request.md
.github/scripts/: decrypt_helper.sh  encrypt_secret.sh
.github/workflows/: ci.yml  python-package.yml
dev/: README.md  dev_logging.py
docs/: CHANGELOG.md  conf.py  core-object-methods.rst  index.md  index.rst  primary-modules.rst  requirements.txt  supporting-modules.rst
docs/_static/: custom.css
docs/getting-started/: index.rst  installation.md  overview.md  quickstart.md
docs/guides/: authentication.md  error-handling.md  index.rst  testing.md
docs/reference/: client.rst  exceptions.rst  index.rst  utilities.rst
examples/: helper_example.json
examples/responses/: api_response_post_500.json  api_response_post_userDetails_200.json  api_response_post_userDetails_404.json  api_response_put_userStatus_400.json  api_response_put_userStatus_403.json  api_response_put_userStatus_404.json
src/pydplus/: __init__.py  api.py  auth.py  constants.py  core.py  credentials.py  decorators.py  users.py
src/pydplus/errors/: __init__.py  exceptions.py  handlers.py
src/pydplus/tests/: __init__.py  resources.py  test_instantiate_object.py
src/pydplus/utils/: __init__.py  core_utils.py  helper.py  log_utils.py  version.py
tests/: conftest.py  resources.py  test_instantiate_object.py
tests/integration/: test_helper_integration.py
tests/unit/: test_api_oauth.py  test_auth.py  test_core_instantiation.py  test_core_utils.py  test_decorators.py  test_error_handlers.py  test_exceptions.py  test_helper_settings.py  test_logging.py  test_version_utils.py
