# --------------------------------------------------------------------
# Core Project Configuration
# --------------------------------------------------------------------
[project]
name = "pydplus"
version = "1.0.0.dev0"
description = "A Python toolset for the RSA ID Plus cloud authentication platform"
readme = "README.md"
requires-python = ">3.9.0,<3.9.1 || >3.9.1,<3.14.0"
license = { file = "LICENSE" }
authors = [
    { name = "Jeff Shurtliff", email = "jeffshurtliff@gmail.com" }
]
maintainers = [
    { name = "Jeff Shurtliff", email = "jeffshurtliff@gmail.com" }
]
keywords = ["rsa-security", "id-plus", "securid", "authentication-manager", "sso", "mfa", "iam", "identity", "authentication"]

classifiers = [
    # Project maturity
    "Development Status :: 4 - Beta",

    # License
    "License :: OSI Approved :: MIT License",
    "License :: Freely Distributable",

    # Intended audience and environment
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    'Topic :: Communications :: FIDO',
    'Topic :: Office/Business',
    'Topic :: Security',
    'Topic :: Security :: Cryptography',
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Systems Administration :: Authentication/Directory",

    # Supported Python versions
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "PyYAML>=6.0.3,<7",
    "requests>=2.32.5",
    "pyjwt>=2.10.1",
    "cryptography>=46.0.5",
    "urllib3>=2.6.3,<3",    # Explicit pin to avoid CVE-2024-37891
    "idna>=3.7,<4",         # Explicit pin to avoid CVE-2024-3651
    "certifi>=2024.7.4",    # Explicit pin to mitigate CA removals (e-Tugra, GLOBALTRUST)

    # Backport of tomllib for Python < 3.11
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/jeffshurtliff/pydplus"
Repository = "https://github.com/jeffshurtliff/pydplus"
Documentation = "https://pydplus.readthedocs.io/en/latest/"                      # Change to stable after first release
# Changelog = "https://pydplus.readthedocs.io/en/latest/CHANGELOG.html"          # Uncomment when docs are ready
"Issue Tracker" = "https://github.com/jeffshurtliff/pydplus/issues"

# --------------------------------------------------------------------
# Poetry-specific Configuration
# --------------------------------------------------------------------
[tool.poetry]
packages = [
    { include = "pydplus", from = "src" }
]

include = ["LICENSE", "README.md"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
pytest-cov = "^7.0.0"
bandit = { version = "^1.7.8", extras = ["sarif"] }
Sphinx = "^7.4.7"
pydata-sphinx-theme = "^0.15.4"
myst-parser = "^3.0.1"
sphinx-favicon = "^1.0.1"

[tool.pytest.ini_options]
addopts = "--strict-markers --cov=pydplus --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: fast, isolated tests that do not require external services",
    "integration: multi-module tests that validate higher-level flows; use --run-integration to execute",
]

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
