# --------------------------------------------------------------------
# Core Project Configuration
# --------------------------------------------------------------------
[project]
name = "pydplus"
version = "1.0.0"
description = "A Python toolset for the RSA ID Plus cloud authentication platform"
readme = "README.md"
requires-python = ">=3.9.2,<3.14.0"
license = { file = "LICENSE" }
authors = [
    { name = "Jeff Shurtliff", email = "jeffshurtliff@gmail.com" }
]
maintainers = [
    { name = "Jeff Shurtliff", email = "jeffshurtliff@gmail.com" }
]
keywords = [
    "rsa-security",
    "id-plus",
    "rsa-id-plus",
    "securid",
    "rsa-securid",
    "authentication-manager",
    "rsa-authentication-manager",
    "cloud-access-service",
    "single-sign-on",
    "sso",
    "mfa",
    "iam",
    "identity",
    "authentication",
    "multifactor-authentication",
    "fido",
]

classifiers = [
    # Project maturity
    "Development Status :: 5 - Production/Stable",

    # License
    "License :: OSI Approved :: MIT License",
    "License :: Freely Distributable",

    # Intended audience and environment
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    'Topic :: Communications :: FIDO',
    'Topic :: Office/Business',
    'Topic :: Security',
    'Topic :: Security :: Cryptography',
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Systems Administration :: Authentication/Directory",

    # Supported Python versions
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "PyYAML>=6.0.3,<7",
    "requests>=2.32.5",
    "pyjwt>=2.12.0",            # Explicit pin to avoid CVE-2026-32597
    "cryptography>=46.0.6",     # Explicit pin to address known cryptography security advisories
    "urllib3>=2.6.3,<3",        # Explicit pin to avoid CVE-2024-37891
    "idna>=3.7,<4",             # Explicit pin to avoid CVE-2024-3651
    "certifi>=2024.7.4",        # Explicit pin to mitigate CA removals (e-Tugra, GLOBALTRUST)

    # Backport of tomllib for Python < 3.11
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/jeffshurtliff/pydplus"
Repository = "https://github.com/jeffshurtliff/pydplus"
Documentation = "https://pydplus.readthedocs.io/en/stable/"
Changelog = "https://pydplus.readthedocs.io/en/latest/CHANGELOG.html"
"Issue Tracker" = "https://github.com/jeffshurtliff/pydplus/issues"

# --------------------------------------------------------------------
# Poetry-specific Configuration
# --------------------------------------------------------------------
[tool.poetry]
packages = [
    { include = "pydplus", from = "src" }
]

include = ["LICENSE", "README.md"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
pytest-cov = "^7.0.0"
bandit = { version = "^1.7.8", extras = ["sarif"] }
Sphinx = "^7.4.7"
pydata-sphinx-theme = "^0.15.4"
myst-parser = "^3.0.1"
sphinx-favicon = "^1.0.1"
ruff = "^0.15.8"
twine = "^6.1.0"

[tool.ruff]
target-version = "py39"
line-length = 130
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["UP006", "UP007", "UP009", "UP035", "UP045"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
addopts = "--strict-markers --cov=pydplus --cov-report=term-missing --cov-report=xml"
testpaths = ["tests/unit", "tests/integration"]
pythonpath = ["src"]
markers = [
    "unit: fast, isolated tests that do not require external services",
    "integration: multi-module tests that validate higher-level flows; use --run-integration to execute",
]

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
